- Possibilité de ne pas afficher par défaut les saisies englobées ou traitées.
- Possibilité d'afficher un rappel des absences non justifiées depuis un certain temps.
- Ajout d'un caractère Valable ou non pour les motifs (utile pour les statistiques nationales).
  Pensez à effectuer le paramétrage de ce caractère dans
     Gestion des modules/Absences 2/Définir les motifs des absences

Discipline:
- Ajout de droits extractDiscProf et extractDiscProfP pour les accès professeur 
  et professeur principal à l'export ODS des incidents.
- Possibilité d'extraire un bilan ODS par période avec chiffrage, avec choix des types de sanction,...
- Sanctions du jour: Possibilité de tri sur le tableau des sanctions non effectuées.
- Possibilité de définir des modèles spécifiques pour des types de sanctions particuliers.
- Possibilité d'afficher (et extraire en CSV) les sanctions de la semaine et non plus seulement du jour.

Engagements:
- Possibilité d'afficher les engagements sur les pages Equipe pédago.

Accueil élèves et parents
- en page résumé, ne pas afficher l'aide sur les devoirs si le module cahier de texte n'est pas ouvert.

Statistiques:
- Ajout de l'extraction des sous-groupes ne concernant qu'une classe.
- Possibilité d'exporter l'établissement d'origine dans l'export de Bulletins.

Orientation:
- Ajout d'un module orientation pour saisir les voeux d'orientation et l'orientation conseillée.
  Les voeux et orientations proposées peuvent être affichées sur les bulletins PDF.

Genèse des classes:
- Possibilité pour les comptes scolarité, cpe, professeur principal, d'effectuer 
  la saisie des profils élèves en vue de la Genèse des classes futures
  (accès activable par statut via Gestion générale/Droits d'accès).

Général:
- Affichage de l'identité de la personne qui suit la classe (chef, adjoint)
  et du professeur principal dans diverses pages de choix de classes.
- Possibilité d'afficher le dates de vacances et jours fériés en page d'accueil simplifiée professeur.